adjust images in news tabs slider slightly higher to avoid clipping

--- a/bbic/joomla/templates/t3_bs3_blank/css/custom.css
+++ b/bbic/joomla/templates/t3_bs3_blank/css/custom.css
@@ -1129,3 +1129,7 @@ ul.mod_docman_icons
 .module_document {
   padding: 5px 0 5px 0;
 }
+
+#twoj_slidertabs_block_id4 > div.st_views > div.st_view_inner > img {
+  transform: translateY(-40px);
+}
